--- a/trump-today.html
+++ b/trump-today.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" /><meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title data-i18n-head="trump-today-title">Main about Trump today — Presidency Clock</title>
+  <title>Main about Trump today — Presidency Clock</title>
   <meta name="description" content="Daily headline about Donald Trump selected by AI based on engagement. Archive of top stories." />
 
   <meta property="og:type" content="website" />
@@ -31,19 +31,15 @@
       <h1 data-i18n="trump-today">Main about Trump today</h1>
       <div class="controls">
         <button id="theme-toggle" class="icon-btn" aria-label="Toggle theme">🌓</button>
-
-        <label class="visually-hidden" for="language-select">Language</label>
-        <select id="language-select" aria-label="Language">
-          <option value="en">EN</option><option value="uk">UA</option><option value="es">ES</option>
-          <option value="fr">FR</option><option value="de">DE</option><option value="it">IT</option>
-          <option value="zh">中文</option><option value="ja">日本語</option>
-        </select>
-
-        <nav class="lang-links" aria-label="Languages">
-          <a href="?lang=en">EN</a><a href="?lang=uk">UA</a><a href="?lang=es">ES</a>
-          <a href="?lang=fr">FR</a><a href="?lang=de">DE</a><a href="?lang=it">IT</a>
-          <a href="?lang=zh">中文</a><a href="?lang=ja">日本語</a>
-        </nav>
+        <form id="lang-form" method="get" action="" style="display:inline">
+          <label class="visually-hidden" for="language-select">Language</label>
+          <select id="language-select" name="lang" aria-label="Language"
+            onchange="(function(sel){var v=String(sel.value||'').toLowerCase(); if(v==='ua')v='uk'; if(v==='us'||v==='en-us')v='en'; sel.value=v; sel.form.submit();})(this)">
+            <option value="en">EN</option><option value="uk">UA</option><option value="es">ES</option>
+            <option value="fr">FR</option><option value="de">DE</option><option value="it">IT</option>
+            <option value="zh">中文</option><option value="ja">日本語</option>
+          </select>
+        </form>
       </div>
     </div>
   </header>
@@ -71,41 +67,11 @@
   </footer>
 
   <script src="script.js?v=3"></script>
-<script src="seo.js?v=3"></script>
-<script
-  <script
-  src="monetization.js?v=3"
-  data-ga="G-XXXXXXXXXX"
-  data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
-  data-slot-top="0000000001"
-  data-slot-infeed="0000000002"
-  data-slot-side="0000000003"></script>
-
-<!-- Language switcher: simple & guaranteed (?lang=...) -->
-<script>
-(function(){
-  function init(){
-    var sel = document.getElementById('language-select');
-    if (!sel) return;
-
-    sel.addEventListener('change', function(){
-      var lang = String(sel.value || '').toLowerCase();
-      if (lang === 'ua') lang = 'uk';
-      if (lang === 'us' || lang === 'en-us') lang = 'en';
-
-      var u = new URL(window.location.href);
-      u.searchParams.set('lang', lang);
-      window.location.href = u.pathname + '?' + u.searchParams.toString();
-    });
-  }
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', init, { once:true });
-  } else {
-    init();
-  }
-})();
-</script>
-
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script src="seo.js?v=3"></script>
+  <script src="monetization.js?v=3"
+    data-ga="G-XXXXXXXXXX"
+    data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
+    data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
