--- a/privacy.html
+++ b/privacy.html
@@ -47,41 +47,10 @@
   </footer>
 
   <script src="script.js?v=3"></script>
-<script src="seo.js?v=3"></script>
-<script
- <script
-  src="monetization.js?v=3"
-  data-ga="G-XXXXXXXXXX"
-  data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
-  data-slot-top="0000000001"
-  data-slot-infeed="0000000002"
-  data-slot-side="0000000003"></script>
-
-<!-- Language switcher: simple & guaranteed (?lang=...) -->
-<script>
-(function(){
-  function init(){
-    var sel = document.getElementById('language-select');
-    if (!sel) return;
-
-    sel.addEventListener('change', function(){
-      var lang = String(sel.value || '').toLowerCase();
-      if (lang === 'ua') lang = 'uk';
-      if (lang === 'us' || lang === 'en-us') lang = 'en';
-
-      var u = new URL(window.location.href);
-      u.searchParams.set('lang', lang);
-      window.location.href = u.pathname + '?' + u.searchParams.toString();
-    });
-  }
-  if (document.readyState === 'loading') {
-    document.addEventListener('DOMContentLoaded', init, { once:true });
-  } else {
-    init();
-  }
-})();
-</script>
-
-<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+  <script src="seo.js?v=3"></script>
+  <script src="monetization.js?v=3"
+    data-ga="G-XXXXXXXXXX" data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
+    data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
+  <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
 </body>
 </html>
