--- a/health.html
+++ b/health.html
@@ -1,9 +1,119 @@
-<!doctype html><html><head>
-<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Health</title>
-<style>body{font-family:system-ui,Segoe UI,Roboto,Arial,sans-serif;padding:24px}
-code{background:#f2f4f8;padding:2px 6px;border-radius:6px}</style>
-</head><body>
-<h1>OK</h1><p>Path: <code id="p"></code></p>
-<script>document.getElementById('p').textContent=location.pathname;</script>
-</body></html>
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <title>Health — Presidency Clock</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="robots" content="noindex,nofollow">
+  <style>
+    :root{--bg:#0b0f18;--fg:#e6ecf2;--card:#141a24;--muted:#94a3b8;--border:#223049;}
+    @media (prefers-color-scheme: light){
+      :root{--bg:#ffffff;--fg:#0b1220;--card:#f6f8fb;--muted:#4b5563;--border:#e5e7eb;}
+    }
+    *{box-sizing:border-box}
+    body{margin:0;background:var(--bg);color:var(--fg);font:16px/1.55 system-ui,-apple-system,Segoe UI,Roboto,Arial,sans-serif}
+    .container{max-width:920px;margin:0 auto;padding:24px}
+    h1{margin:0 0 12px}
+    .card{background:var(--card);border:1px solid var(--border);border-radius:12px;padding:16px;margin-top:16px}
+    code{background:rgba(148,163,184,.15);padding:2px 6px;border-radius:6px}
+    .row{display:flex;gap:12px;flex-wrap:wrap;align-items:center}
+    .muted{color:var(--muted)}
+    .controls{display:flex;gap:.5rem;align-items:center;flex-wrap:wrap}
+    #lang-form select{margin-left:.25rem}
+    a.btn{display:inline-block;padding:.4rem .7rem;border:1px solid var(--border);border-radius:.5rem;text-decoration:none;color:inherit}
+    .grid{display:grid;grid-template-columns:1fr;gap:12px}
+    @media (min-width:700px){.grid{grid-template-columns:1fr 1fr}}
+    footer{margin-top:24px;font-size:.9rem}
+  </style>
+</head>
+<body>
+  <div class="container">
+    <div class="row" style="justify-content:space-between">
+      <h1>Health Check</h1>
+
+      <!-- Мовний перемикач (чистий HTML → додає ?lang=...) -->
+      <div class="controls">
+        <form id="lang-form" method="get" action="" style="display:inline">
+          <label class="visually-hidden" for="language-select">Language</label>
+          <select id="language-select" name="lang" aria-label="Language select"
+            onchange="(function(sel){var v=(sel.value||'').toLowerCase(); if(v==='ua')v='uk'; if(v==='us'||v==='en-us')v='en'; sel.value=v; sel.form.submit();})(this)">
+            <option value="en">EN</option><option value="uk">UA</option><option value="es">ES</option>
+            <option value="fr">FR</option><option value="de">DE</option><option value="it">IT</option>
+            <option value="zh">中文</option><option value="ja">日本語</option>
+          </select>
+        </form>
+      </div>
+    </div>
+
+    <div class="card grid">
+      <div>
+        <h3 style="margin-top:0">Location</h3>
+        <p><strong>Origin:</strong> <code id="origin"></code></p>
+        <p><strong>Pathname:</strong> <code id="path"></code></p>
+        <p><strong>Search:</strong> <code id="search"></code></p>
+        <p><strong>Detected language:</strong> <code id="lang"></code></p>
+        <p class="muted" id="hint"></p>
+      </div>
+      <div>
+        <h3 style="margin-top:0">Quick links</h3>
+        <p class="row">
+          <a class="btn" href="/health.html">/health.html</a>
+          <a class="btn" href="/?lang=uk">/?lang=uk</a>
+          <a class="btn" href="/?lang=es">/?lang=es</a>
+        </p>
+        <p class="row">
+          <a class="btn" href="/uk/health.html">/uk/health.html</a>
+          <a class="btn" href="/es/health.html">/es/health.html</a>
+        </p>
+        <p class="muted">Якщо посилання з префіксом <code>/uk/</code> відкривається — rewrites працюють.
+          Якщо ні — користуйся варіантом з <code>?lang=</code> (це теж ок).</p>
+      </div>
+    </div>
+
+    <footer class="muted">© <span id="year"></span> Presidency Clock — test page (noindex)</footer>
+  </div>
+
+  <script>
+    (function(){
+      var u = new URL(location.href);
+      var search = u.searchParams;
+      var langs = ["en","uk","es","fr","de","it","zh","ja"];
+      function detectLang(){
+        var q = (search.get('lang') || '').toLowerCase();
+        if (q === 'ua') q = 'uk';
+        if (q === 'us' || q === 'en-us') q = 'en';
+        if (langs.indexOf(q) > -1) return q;
+        // спроба зчитати з префікса шляху: /uk/health.html
+        var parts = location.pathname.split('/').filter(Boolean);
+        var pref = parts[0] || '';
+        if (langs.indexOf(pref) > -1 && pref !== 'en') return pref;
+        return 'en';
+      }
+
+      // вивід
+      document.getElementById('origin').textContent = location.origin;
+      document.getElementById('path').textContent = location.pathname;
+      document.getElementById('search').textContent = location.search || '(none)';
+      var lang = detectLang();
+      document.getElementById('lang').textContent = lang;
+
+      // встановлюємо значення селекта
+      var sel = document.getElementById('language-select');
+      if (sel) sel.value = lang;
+
+      // підказка про rewrites
+      var hint = document.getElementById('hint');
+      if (location.pathname.startsWith('/uk/') || location.pathname.startsWith('/es/')) {
+        hint.textContent = 'Ви на URL із мовним префіксом. Якщо сторінка відкрилась — rewrites активні.';
+      } else if (search.has('lang')) {
+        hint.textContent = 'Мова встановлена через ?lang=. Це повністю робочий варіант для SEO та AdSense.';
+      } else {
+        hint.textContent = 'Мова не задана. Оберіть у селекті — з’явиться ?lang= і сторінка перезавантажиться.';
+      }
+
+      // рік у футері
+      document.getElementById('year').textContent = new Date().getFullYear();
+    })();
+  </script>
+</body>
+</html>
