--- a/trump-today.html
+++ b/trump-today.html
@@ -22,7 +22,11 @@
   <link rel="preconnect" href="https://pagead2.googlesyndication.com" crossorigin>
   <link rel="preconnect" href="https://googleads.g.doubleclick.net" crossorigin>
   <meta name="theme-color" content="#0b0f18">
-
+<!-- Google AdSense Auto ads -->
+<meta name="google-adsense-account" content="ca-pub-5023415479696725" />
+<script async
+  src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-5023415479696725"
+  crossorigin="anonymous"></script>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
