--- a/privacy.html
+++ b/privacy.html
@@ -56,5 +56,11 @@
     data-ga="G-XXXXXXXXXX" data-adsense="ca-pub-XXXXXXXXXXXXXXXX"
     data-slot-top="0000000001" data-slot-infeed="0000000002" data-slot-side="0000000003"></script>
   <script>document.getElementById('year').textContent=new Date().getFullYear();</script>
+<!-- базові скрипти сайту -->
+<script src="script.js?v=4"></script>
+<script src="seo.js?v=4"></script>
+
+<!-- Рік у футері -->
+<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
