--- a/index.html
+++ b/index.html
@@ -143,5 +143,11 @@
     data-slot-infeed="0000000002"
     data-slot-side="0000000003"></script>
   <script>document.getElementById('year').textContent = new Date().getFullYear();</script>
+<!-- базові скрипти сайту -->
+<script src="script.js?v=4"></script>
+<script src="seo.js?v=4"></script>
+
+<!-- Рік у футері -->
+<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
