--- a/health.html
+++ b/health.html
@@ -112,5 +112,11 @@
     }
   })();
   </script>
+<!-- базові скрипти сайту -->
+<script src="script.js?v=4"></script>
+<script src="seo.js?v=4"></script>
+
+<!-- Рік у футері -->
+<script>document.getElementById('year').textContent = new Date().getFullYear();</script>
 </body>
 </html>
